completed the carousel design

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,5 +4,18 @@
   "featured_products": "Featured Products",
   "wishlist": "Wishlist",
   "order_tracking": "Order tracking",
-  "French": "French"
+  "French": "French",
+  "The_feature_of_health": "The feature of health",
+  "Shopping_with_style": "Shopping with style",
+  "weekend_discount": "weekend discount",
+  "Big_screens_in": "Big screens in incredibly slim designs in your hands",
+  "shop_now": "shop now",
+  "Free_Delivery": "Free Delivery",
+  "Shop": "Shop",
+  "Cell_Phones": "Cell Phones",
+  "HeadPhones": "HeadPhones",
+  "Blog": "Blog",
+ "Super_Discount": "Super Discount",
+  "Only_this_weekend": "Only this weekend",
+  "All_Departments": "All Departments"
 }
