--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,5 +4,20 @@
   "featured_products": "Produits populaires",
   "wishlist": "Liste de souhaits",
   "order_tracking": "Suivi de commande",
-  "French": "Français"
+  "French": "Français",
+  "The_feature_of_health": "La caractéristique de la santé",
+  "Shopping_with_style": "Faire du shopping avec style",
+  "weekend_discount": "remise du week-end",
+  "Big_screens_in": "De grands écrans dans des designs incroyablement minces entre vos mains",
+  "shop_now": "Achetez maintenant",
+  "Free_Delivery": "Livraison gratuite",
+  "Shop": "Magasin",
+  "Home": "Accueil",
+  "Cell_Phones": "Téléphones ",
+  "HeadPhones": "Ecouteur",
+   "Blog": "Blog",
+  "Super_Discount": "Super remise",
+  "Only_this_weekend": "Ce week-end",
+  "All_Departments": "Catégories"
+
 }
