consumed the categories endpoint

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,5 +17,5 @@
   "Blog": "Blog",
  "Super_Discount": "Super Discount",
   "Only_this_weekend": "Only this weekend",
-  "All_Departments": "All Departments"
+  "Categories": "Categories"
 }
