--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -18,6 +18,6 @@
    "Blog": "Blog",
   "Super_Discount": "Super remise",
   "Only_this_weekend": "Ce week-end",
-  "All_Departments": "Catégories"
+  "Categories": "Catégories"
 
 }
